--- a/index.html
+++ b/index.html
@@ -4,8 +4,90 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New year, new me</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    
+    <header>
+        <section class="banner-sec">
+            <div class="banner-info">
+                <h1>All Thinks Are <br> Possible If You <br> believe</h1>
+                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate et explicabo enim id, cupiditate, culpa vitae in sunt maiores eaque accusantium delectus odit. Non, accusantium!</p>
+                <button class="contact-btn">Contact us</button>
+            </div>
+        </section>    
+    </header>
+    <main>
+        <section class="woman">
+            <div class="woman-pic">
+                <img src="images/person.png" alt="">
+            </div>
+            <div class="her-mistakes">
+                <h1>My failures of <br> previous year</h1>
+                <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+                <!-- points -->
+                <p class="list">Contrary to popular belief, is not simply.</p>
+                <p class="list" >Contrary to popular belief.</p>
+                <p class="list" ">Contrary to popular , is not simply.</p>
+                <p class="list">Contrary to popular belief, is not simply.</p>
+                <p class="list" >Contrary to popular simply.</p>
+            </div>
+        </section>
+        <!-- My plans -->
+        <section class="my-plan">
+            <!-- <h1 class="plan-title">My plan</h1> -->
+            <h1 class="plan-title">My plan</h1>
+            <div class="plan-list">
+                <img src="images/icons/web.png" alt="">
+                <h2>Web development</h2>
+                <p>Lorem ipsum dolor sit</p>
+            </div>
+            <div class="plan-list">
+                <img src="images/icons/js.png" alt="">
+                <h2>Java script</h2>
+                <p>Lorem ipsum dolor sit.</p>
+            </div>
+            <div class="plan-list">
+                <img src="images/icons/smoke.png" alt="">
+                <h2>Smoking habit</h2>
+                <p>Lorem ipsum dolor sit.</p>
+            </div>
+            <div class="plan-list">
+                <img src="images/icons/ecom.png" alt="">
+                <h2>Ecomerce</h2>
+                <p>Lorem ipsum dolor sit.</p>
+            </div>
+        </section>
+        <section class="positive-mindset">
+            <div class="positive-info">
+             <h1> Always keep a positive <br> mindset</h1>
+             <button class="call-now"> Cal now</button>
+            </div>
+        </section>
+    </main>
+    <footer ">
+        <div class="contact-sec">
+            <h1>Future</h1>
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+            <p>Email: info@gmail.com</p>
+            <p>phone : 015 00000000</p>
+            <div class="social-links">
+                <a href="">
+                    <img src="images/icons/fb.png" alt="">
+                </a>
+                <a href="">
+                    <img src="images/icons/twitter.png" alt="">
+                </a>
+                <a href="">
+                    <img src="images/icons/youtube.png" alt="">
+                </a>
+            </div>
+        </div>
+        <div class="submit-sec">
+            <h1>Subscribe</h1>
+            <input type="email" placeholder="Enter your email"> <br>
+            <button> Subscribe</button>
+        </div>
+    </div>
+
 </body>
 </html>
